--- a/src/output.css
+++ b/src/output.css
@@ -556,12 +556,14 @@ video {
   display: none;
 }
 
-.sticky{
+nav{
   position: sticky;
-}
-
-.top-0{
   top: 0px;
+  width: 100%;
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 154 160 / var(--tw-bg-opacity, 1));
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .mx-7{
@@ -577,10 +579,6 @@ video {
 .my-5{
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
-}
-
-.mb-2{
-  margin-bottom: 0.5rem;
 }
 
 .mb-1{
@@ -603,16 +601,8 @@ video {
   min-height: 100vh;
 }
 
-.w-full{
-  width: 100%;
-}
-
-.w-2{
-  width: 0.5rem;
-}
-
-.w-1{
-  width: 0.25rem;
+.w-1\/2{
+  width: 50%;
 }
 
 .w-1\/3{
@@ -623,8 +613,8 @@ video {
   width: 66.666667%;
 }
 
-.w-1\/2{
-  width: 50%;
+.w-full{
+  width: 100%;
 }
 
 .max-w-screen-sm{
@@ -659,6 +649,18 @@ video {
   gap: 1rem;
 }
 
+.gap-3{
+  gap: 0.75rem;
+}
+
+.overflow-auto{
+  overflow: auto;
+}
+
+.text-nowrap{
+  text-wrap: nowrap;
+}
+
 .rounded-full{
   border-radius: 9999px;
 }
@@ -682,18 +684,6 @@ video {
   border-width: 1px;
 }
 
-.border{
-  border-width: 1px;
-}
-
-.border-b{
-  border-bottom-width: 1px;
-}
-
-.border-b-2{
-  border-bottom-width: 2px;
-}
-
 .border-b-\[1px\]{
   border-bottom-width: 1px;
 }
@@ -701,19 +691,6 @@ video {
 .border-gray-200{
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
-}
-
-.border-b-\[\]{
-  border-bottom-color: ;
-}
-
-.border-b-\[1\]{
-  border-bottom-color: 1;
-}
-
-.border-b-gray-500{
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(107 114 128 / var(--tw-border-opacity, 1));
 }
 
 .border-b-gray-200{
@@ -724,6 +701,11 @@ video {
 .bg-\[\#FFE7E7\]{
   --tw-bg-opacity: 1;
   background-color: rgb(255 231 231 / var(--tw-bg-opacity, 1));
+}
+
+.bg-gray-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
 }
 
 .bg-pink-kb{
@@ -739,16 +721,6 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-gray-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity, 1));
-}
-
-.bg-gray-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
 }
 
 .p-8{
@@ -780,11 +752,6 @@ video {
   line-height: 1.75rem;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
@@ -804,11 +771,6 @@ video {
   color: rgb(156 163 175 / var(--tw-text-opacity, 1));
 }
 
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
 .text-gray-500{
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity, 1));
@@ -824,7 +786,7 @@ video {
   color: rgb(254 154 160 / var(--tw-text-opacity, 1));
 }
 
-.text-gray-50{
+.text-white{
   --tw-text-opacity: 1;
-  color: rgb(249 250 251 / var(--tw-text-opacity, 1));
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
